got the globe working

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
-<!DOCTYPE HTML>
-<html>
+  <!DOCTYPE html>
+  <html lang="en">
   <head>
-    <script src="http://www.webglearth.com/v2/api.js"></script>
-    <script src="app.js"></script>
-    <link rel="stylesheet" href="style.css">
-
-    <title>WebGL Earth API: Hello World</title>
+    <meta charset="UTF-8">
+    
+    <script src="//unpkg.com/globe.gl"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script defer src="app.js"></script>
+    <title>Document</title>
   </head>
-  <body onload="initialize()">
-    <div id="earth_div"></div>
+  <body>
+    <div id="globeViz"></div>
+    
   </body>
-</html>
+  
+  <style> body { margin: 0; } </style>
+  </html>
