added the navigation to the left side

--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <script src="//unpkg.com/globe.gl"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="app.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
   </head>
   <body>
-    <div id="globeViz"></div>
-    
+    <div>
+    <div class="navigaton">dsadsadsa</div>
+    <div id="globeViz">
+
+    </div>
+  </div>
   </body>
   
-  <style> body { margin: 0; } </style>
   </html>
