--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
-    <div class="navigaton">dsadsadsa</div>
+    <div class="navigaton"></div>
     <div id="globeViz">
 
-    </div>
   </div>
   </body>
   
