--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="navigaton"></div>
+    <div class="navigaton">
+      
+      <div class="card">
+          <div class="card__where">Where</div>
+          <div class="card__when">When</div>
+          <div class="card__mag">Magnitude</div>
+      </div>
+
+    </div>
     <div id="globeViz">
 
   </div>
