added the individual card

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <div class="navigaton">
       
       <div class="card">
-          <div class="card__where">Where</div>
-          <div class="card__when">When</div>
-          <div class="card__mag">Magnitude</div>
+          <div class="card__where">Where: <span class="span__where"></span></div>
+          <div class="card__when">When: <span class="span__when"></span></div>
+          <div class="card__mag">Magnitude: <span class="span__mag"></span></div>
+          <span class="card__lat"></span>
+          <span class="card__lng"></span>
       </div>
 
     </div>
