--- a/index.html
+++ b/index.html
@@ -11,15 +11,26 @@
   </head>
   <body>
     <div class="navigaton">
+      <div class="upperNav">
+        <div class="upperNavItem lastDay"><a href="#" class="UpperNavLinks  lastDayLink">Last Day</a></div>
+        <div class="upperNavItem lastSevendDays"><a href="#" class="UpperNavLinks lastSevendDaysLink">Last 7 Days</a></div>
+        <div class=" upperNavItem lastMonth"><a href="#" class="UpperNavLinks lastMonthLink">Last Month</a></div>
+        <div class= " upperNavItem ShowBiggestFromAllTheTime"><a href="#" class="UpperNavLinks ShowBiggestFromAllTheTimeLink">All bigger than 8</a></div>
+
+        <div class="sortByText  ">Sort By</div>
+        <div class="sortBy sortByMagnitude ">Magnitude</div>
+        <div class="sortBy sortByTime">Time</div>
+      </div>
       
-      <div class="card">
+      <!-- <div class="card">
           <div class="card__where">Where: <span class="span__where"></span></div>
           <div class="card__when">When: <span class="span__when"></span></div>
           <div class="card__mag">Magnitude: <span class="span__mag"></span></div>
           <span class="card__lat"></span>
           <span class="card__lng"></span>
-      </div>
+      </div> -->
 
+      <div class="pages"></div>
     </div>
     <div id="globeViz">
 
