added the snapping of the globe to the posiiton of earthquake

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class=" upperNavItem lastMonth"><a href="#" class="UpperNavLinks lastMonthLink">Last Month</a></div>
         <div class= " upperNavItem ShowBiggestFromAllTheTime"><a href="#" class="UpperNavLinks ShowBiggestFromAllTheTimeLink">All bigger than 8</a></div>
 
-        <div class="sortByText  ">Sort By</div>
+        <div class="sortByText  ">Sort by: </div>
         <div class="sortBy sortByMagnitude ">Magnitude</div>
         <div class="sortBy sortByTime">Time</div>
       </div>
