added the pages div to select the differnet page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
           <span class="card__lng"></span>
       </div> -->
 
-      <div class="pages"></div>
+      <div class="pages">
+        dsadsa
+      </div>
     </div>
     <div id="globeViz">
 
