added the desing of the pages

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
       </div> -->
 
       <div class="pages">
-        dsadsa
+        <div class="previousePage">Prev</div>
+        <div class="currentPage">1</div>
+        <div class="nextPage">Next</div>
       </div>
     </div>
     <div id="globeViz">
