added the proper date manufacturing

--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
   <body>
     <div class="navigaton">
       <div class="upperNav">
-        <div class="upperNavItem lastDay"><a href="#" class="UpperNavLinks  lastDayLink">Last Day</a></div>
-        <div class="upperNavItem lastSevendDays"><a href="#" class="UpperNavLinks lastSevendDaysLink">Last 7 Days</a></div>
-        <div class=" upperNavItem lastMonth"><a href="#" class="UpperNavLinks lastMonthLink">Last Month</a></div>
-        <div class= " upperNavItem ShowBiggestFromAllTheTime"><a href="#" class="UpperNavLinks ShowBiggestFromAllTheTimeLink">All bigger than 8</a></div>
+        <div class="upperNavItem lastDay"></div>
+        <div class="upperNavItem lastSevendDays"></div>
+        <div class=" upperNavItem lastMonth"></div>
+        <div class= " upperNavItem ShowBiggestFromAllTheTime"></div>
 
         <div class="sortByText  ">Sort by: </div>
         <div class="sortBy sortByMagnitude ">Magnitude</div>
         <div class="sortBy sortByTime">Time</div>
       </div>
+
+      <div class="cardsNavigator"></div>
       
       <!-- <div class="card">
           <div class="card__where">Where: <span class="span__where"></span></div>
