added the border and hover on pagination next and previous

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div class="navigaton">
+      yea
       <div class="upperNav">
         <div class="upperNavItem lastDay"></div>
         <div class="upperNavItem lastSevendDays"></div>
