added last updated date/ should also add time

--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
   </head>
   <body>
     <div class="navigaton">
-      yea
       <div class="upperNav">
-        <div class="upperNavItem lastDay"></div>
-        <div class="upperNavItem lastSevendDays"></div>
-        <div class=" upperNavItem lastMonth"></div>
-        <div class= " upperNavItem ShowBiggestFromAllTheTime"></div>
+        <div class="titleOfTheApp">Visualization of the earthquakes in last 3 days</div>
+       
 
         <div class="sortByText  ">Sort by: </div>
         <div class="sortBy sortByMagnitude ">Magnitude</div>
         <div class="sortBy sortByTime">Time</div>
+        <div class="lastUpdatedAt">Last update: <span class="lastUpdateSpan"></span></div>
       </div>
 
       <div class="cardsNavigator"></div>
